fix sr-only overflow on blink and webkit

--- a/src/styling/scss/App.scss
+++ b/src/styling/scss/App.scss
@@ -291,6 +291,10 @@ button.darkBlock {
     }
   }
 
+  label.sr-only {
+    width: 1px;
+  }
+
   .raise {
     position: relative;
     z-index: 1;
